fix for ipad res regarding code blocks; fix android dpi scaling media query issue: http://stackoverflow.com/questions/12257279/nexus-7-screen-width-returns-800-but-media-query-max-width-720px-still-applies

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -10,9 +10,7 @@ body{
 	font-size: 14px;
 	background: $color-background;
 	color: $color-gray01;
-	@media screen and (max-width: 766px){
-		margin: 0 20px;
-	}
+  margin: 0 20px;
 	@media screen and (max-width: 600px){
 		font-size: 13px;
 	}
